# w_slam

./: CMakeLists.txt  README.md  package.xml
app/: CMakeLists.txt  run_euroc_stereo.cpp  run_euroc_stereo_with_imu.cpp
config/: default.yaml  euroc.yaml  kitti.yaml
include/: System.h  algorithm.h  backend.h  camera.h  ceres_types.h  common_include.h  config.h  edge.h  edge_reprojection.h  eigen_BA.h  feature.h  frame.h  frontend.h  g2o_types.h  loss_function.h  map.h  mappoint.h  problem.h  rotation.h  vertex.h  vertex_point.h  vertex_pose.h  viewer.h
src/: CMakeLists.txt  System.cpp  backend.cpp  camera.cpp  config.cpp  edge.cc  edge_reprojection.cc  feature.cpp  frame.cpp  frontend.cpp  loss_function.cc  map.cpp  mappoint.cpp  problem.cc  vertex.cc  vertex_pose.cc  viewer.cpp
